# bbbot

./: .gitignore  README.md  pyproject.toml
bbbot/: __init__.py  client.py  ddp.py  join.py  rtc.py  utils.py
examples/: bot.py  gl2join.py
