[tool.poetry]
name = "bbbot"
version = "0.1.0"
description = ""
authors = ["Marcel Hellkamp <marc@gsites.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9.5"
aiortc = "^1.9.0"
websockets = "^12.0"
beautifulsoup4 = "^4.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
